# softlight-agent-b

./: pyproject.toml  requirements.txt
datasets/github_filter_bug/: _about.json  manifest.jsonl
datasets/notion_create_page/: _about.json
datasets/notion_filter_db/: _about.json  manifest.jsonl
src/agent_b/: __main__.py  capture.py  config.py  dataset.py  detectors.py  main.py  navigator.py  planner.py  selectors.py  skills.py  utils.py
tasks/: examples.yaml
